# ordino

./: .eslintcache  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierrc.js  .travis.yml  .yarnrc.yml  .yo-rc.json  AView.ts  CHANGELOG.md  Dialogs.ts  FormBuilder.ts  LineUpCommands.ts  LineUpStoredData.ts  LineUpView.ts  MainNavi.ts  ProxyView.ts  README.md  SessionList.ts  SimpleView.ts  StartMenu.ts  Targid.ts  TargidSession.ts  View.ts  WelcomeView.ts  __init__.py  build.py  buildInfo.js  buildPython.js  cmds.ts  cypress.config.ts  cypress.json  db.py  detail.ts  index.html  jest.config.js  lineup.ts  main.ts  npm-shrinkwrap.json  package-lock.json  (+22 more)
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.storybook/: main.js  preview.js
deploy/: docker-compose-debug.partial.yml  docker-compose.partial.yml  nginx-default.conf
docs/: .gitignore  conf.py  index.rst
id_converter_service/: Dockerfile  README.md  config.json  main.py  req.txt  user_mapping.csv
ordino/: __init__.py  db.py  dbview.py  mapping_table.py  proxy.py  sql.py  sql_use_gevent.py  storage.py  swagger.yml  utils.py
src/: AOrdino.ts  Dialogs.ts  EditProvenanceGraphMenu.ts  FormBuilder.ts  GeneIDTypeDetector.ts  LineUpCommands.ts  LineUpView.ts  LoginFirstView.ts  Ordino.ts  ProxyView.ts  ScoreLoadingWrapper.ts  SessionList.ts  SimpleView.ts  StartMenu.ts  Targid.ts  View.ts  ViewWrapper.ts  WelcomeView.ts  _loginForm.html  cached.ts  clientConfig.schema.json  cmds.ts  constants.ts  extensions.ts  index.html  index.ts  initial.ts  initialize.ts  (+7 more)
(+382 files in other folders)
